deploy/principality-media.yaml
apiVersion: v1
kind: Service
metadata:
  name: principality-media
  namespace: availability
spec:
  type: ExternalName
  externalName: minio.aioffice.svc.cluster.local
  ports:
    - name: http
      port: 9000
